[project]
name = "nanomsg"
version = "0.4.2"
authors = [
  "Daniel Fagnan <dnfagnan@gmail.com>",
  "Jason E. Aten",
  "David C. Bishop",
  "Dennis Lawler",
  "Zachary Tong",
  "Dan Burkert",
  "Benoît Labaere <benoit.labaere@gmail.com>"
]

description = "A high-level, Rust idiomatic wrapper around nanomsg."
homepage = "https://github.com/thehydroimpulse/nanomsg.rs"
documentation = "https://github.com/thehydroimpulse/nanomsg.rs"
repository = "https://github.com/thehydroimpulse/nanomsg.rs"
readme = "./README.md"
keywords = ["nanomsg", "binding", "network", "pub", "sub"]
license = "MIT"

[dependencies.nanomsg-sys]
path = "./nanomsg_sys"
version = "0.4.1"

[dependencies]
libc = "0.2.2"
