[project]
name = "nanomsg"
version = "0.7.2"
authors = [
  "Daniel Fagnan <dnfagnan@gmail.com>",
  "Jason E. Aten",
  "David C. Bishop",
  "Dennis Lawler",
  "Zachary Tong",
  "Dan Burkert",
  "Benoît Labaere <benoit.labaere@gmail.com>",
  "Chip Collier"
]

description = "A high-level, Rust idiomatic wrapper around nanomsg."
homepage = "https://github.com/thehydroimpulse/nanomsg.rs"
documentation = "https://github.com/thehydroimpulse/nanomsg.rs"
repository = "https://github.com/thehydroimpulse/nanomsg.rs"
readme = "./README.md"
keywords = ["nanomsg", "binding", "network", "pub", "sub"]
categories = ["network-programming"]
license = "MIT"

[badges]
travis-ci = { repository = "blabaere/nanomsg.rs" }
appveyor = { repository = "blabaere/nanomsg.rs" }

[features]
bundled = ["nanomsg-sys/bundled"]
no_anl = ["nanomsg-sys/no_anl"]

[dependencies.nanomsg-sys]
path = "./nanomsg_sys"
version = "0.7.*"

[dependencies]
libc = "0.2.*"
