[package]

name = "nanomsg-sys"
version = "0.1.0"
authors = [
  "Daniel Fagnan <dnfagnan@gmail.com>",
  "Benoît Labaere"
]

license = "MIT"
description = "The low-level bindings that is used by the nanomsg library."
keywords = ["binding", "nanomsg"]

#[dependencies]
#link-config = "^0.1.1"

[dependencies.link-config]
git = "https://github.com/alexcrichton/link-config.git"
